# Illustris-zoom-simulation

./: README.md  pyproject.toml
.github/workflows/: wf.yml
scripts/: SFR_area_ratio.py  SFR_area_ratio_final.py  geometry.py  test_geography.py  test_geometry.py
scripts/.circleci/: config.yml
src/: rectangle.py  sfr_area_ratio_calc.py  sfr_area_ratio_plot.py
test/: test_rectangle.py
