[tool.poetry]
name = "Illustris-zoom-simulation"
version = "0.0.1"
description = "Precise predictions for the formation of structure in the visible matter"
authors = ["Gustav Rasmussen"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
# pytest = "^7.4.0"
# pytest-cov = "^4.1.0"
ruff = "^0.0.280"
# mypy = "^1.4.1"
# wily = "^1.24.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
